<resources>
    <string name="app_name">Ocean_A2_02_09_2020</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="idade">Idade</string>
    <string name="digite_o_seu_nome">Digite o seu nome</string>
    <string name="resultado">Resultado</string>
    <string name="atualizar">Atualizar</string>
    <string name="limpar">Limpar</string>
    <string name="erro_idade">Digite uma idade válida</string>
    <string name="erro_nome">Digite um nome válido</string>
    <string name="resultado_nome_idade">Olá %1$s, você tem %2$s anos.</string>
</resources>
